k8s/monitor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitor
  labels:
    app: monitor
