k8s/monitor/prometheus-server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-server
  namespace: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-server
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      containers:
        - image: tubetrue01/prometheus:2.16.0
          name: prometheus-server
          command:
            - "/bin/prometheus"
          args:
            - "--config.file=/etc/prometheus/config/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"
            - "--web.console.libraries=/usr/share/prometheus/console_libraries"
            - "--web.console.templates=/usr/share/prometheus"
            - "--storage.tsdb.retention=30d"
            - "--web.enable-lifecycle"
          ports:
            - containerPort: 9090
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /prometheus
            - name: server-config-volume
              mountPath: /etc/prometheus/config
            - name: rule-config-volume
              mountPath: /etc/prometheus/rule
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 1024Mi
      serviceAccountName: prometheus-server
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: prometheus-server

        - name: server-config-volume
          configMap:
            name: prometheus-server-config
        - name: rule-config-volume
          configMap:
            name: prometheus-server-rule-config
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus-server
  namespace: monitor
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: prometheus-server
